2006-06-03  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py (BackRefList.right_click): 
	override right click, because Remove and Add have no relevence
	(BackRefList.create_buttons): set tooltips
	* src/FilterEditor/_ShowResults.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_EditFilter.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_FilterEditor.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_EditRule.py: move glade functions to 
	ManagedWindow
	* src/ManagedWindow.py: move glade functions to ManagedWindow

2006-06-02  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/*: use IndexMark
	* src/plugins/DetDecendantReport: use IndexMark
	* src/plugins/AncestorReport.py: use IndexMark
	* src/plugins/DetAncestralReport.py: use IndexMark
	* src/plugins/DecendReport.py: use IndexMark
	* src/plugins/IndivComplete.py: use IndexMark
	* src/plugins/FamilyGroup.py: use IndexMark
	* src/BaseDoc.py: add IndexMark
	* src/ReportBase.py: get_person_index -> get_person_mark

2006-06-02  Don Allingham  <don@gramps-project.org>
	* src/FilterEditor/_ShowResults.py: use list instead of text display
	* src/FilterEditor/_EditFilter.py: clean up
	* src/FilterEditor/_EditRule.py: clean up
	* src/glade/rule.glade: clean up
	* src/Filters/Rules/Person/_IsDescendantFamilyOf.py: make current with RelLib

	* src/Filters/Rules/Person/_HasFamilyEvent.py: make current with RelLib

	* src/Filters/Rules/Person/_IsParentOfFilterMatch.py: make current with RelLib

	* src/Filters/Rules/Person/_FamilyWithIncompleteEvent.py: make current with RelLib

	* src/Filters/Rules/Person/_IsBookmarked.py: make current with RelLib

	* src/Filters/Rules/Person/_IsLessThanNthGenerationAncestorOfBookmarked.py:
	make current with RelLib

2006-06-01  Don Allingham  <don@gramps-project.org>
	* src/Filters/Rules/Person/_HaveAltFamilies.py: bring up to speed with
	RelLib changes

2006-06-01  Brian Matherly  <brian@gramps-project.org>