@@ -1,3 +1,14 @@
+2006-06-03  Brian Matherly  <brian@gramps-project.org>
+	* src/docgen/ODFDoc.py: add Table of Contents mark
+	* src/docgen/OpenOfficeDoc.py: add Table of Contents mark
+	* src/plugins/DetDecendantReport: add Table of Contents marks
+	* src/plugins/AncestorReport.py: add Table of Contents marks
+	* src/plugins/DetAncestralReport.py: add Table of Contents marks
+	* src/plugins/DecendReport.py: add Table of Contents marks
+	* src/plugins/IndivComplete.py: add Table of Contents marks
+	* src/plugins/FamilyGroup.py: add Table of Contents marks
+	* src/BaseDoc.py: add TOC levels
+
 2006-06-03  Don Allingham  <don@gramps-project.org>
 	* src/DisplayTabs/_BackRefList.py (BackRefList.right_click): 
 	override right click, because Remove and Add have no relevence
